--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   url_launcher: ^6.0.17
   cached_network_image: ^3.2.0
   flutter_staggered_grid_view: ^0.6.1
+  retrofit: ^3.0.1+1
+  image_picker: ^0.8.4+10
+  dio: ^4.0.4
 
 dev_dependencies:
   flutter_test:
@@ -32,6 +35,8 @@ dev_dependencies:
 
 
   flutter_lints: ^1.0.0
+  retrofit_generator: ^4.0.1
+  build_runner: ^2.1.7
 
 
 flutter:
